bug debugge --> stat incliquable quand question no longer exists

--- a/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
+++ b/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
@@ -4,7 +4,7 @@
 
 <ng-template #weburlmodal let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Coller l'adresse de l'image</h4>
+      <h4 class="modal-title" id="modal-basic-title">Coller l'adresse de l'image :</h4>
       <button type="button" class="close" aria-label="Close" (click)="urlForm.reset();modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
