--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.html
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.html
@@ -4,7 +4,7 @@
 
 <ng-template #imgdbmodal let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Choisir une image:</h4>
+      <h4 class="modal-title" id="modal-basic-title">Cliquer sur une image :</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
