--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
@@ -1,6 +1,7 @@
 @import 'src/styles/card.scss';
 @import "src/styles/variables";
 @import 'src/styles/images.scss';
+@import 'src/styles/common.scss';
 
 #imgBtn:hover {
     cursor: pointer;
