--- a/front-end/src/app/game/recap/recap.component.html
+++ b/front-end/src/app/game/recap/recap.component.html
@@ -1,3 +1,6 @@
+<span class="navbar-brand" routerLink="../../.." style="color: grey; margin-left: 0.5em; float: left;">
+    <i class="fa fa-angle-left" aria-hidden="true"></i>
+</span>
 <div *ngIf = "quiz">
     <div id="questionQuiz" *ngIf="currentQuestion">
         <div *ngIf="image.url; else noImage">
