--- a/front-end/src/app/core/answers/answer-form/answer-form.component.scss
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.scss
@@ -82,10 +82,8 @@
     grid-template-columns: repeat(2, auto);
 }
 
-/*
-.modal-larger {
-    height: calc(100vh - 143px);
-    min-height: 10em;
-    max-height: 18em;
-    overflow-y: auto; 
-}*/
+.errorMessage{
+    color:red;
+}
+
+input[disabled] {pointer-events:none}
