--- a/front-end/src/app/core/players/player-list-player/player-list-player.component.scss
+++ b/front-end/src/app/core/players/player-list-player/player-list-player.component.scss
@@ -19,15 +19,15 @@
   width: 100%;
 }
 
-.button-player:hover {
-  cursor: pointer;
-
-}
-
 .delete {
   align-self: flex-end;
 }
 
 .title {
   text-align: center;
+}
+
+.guest{
+  display: block;
+  margin: 0em;
 }
