--- a/front-end/src/app/game/runner/runner.component.html
+++ b/front-end/src/app/game/runner/runner.component.html
@@ -21,7 +21,7 @@
 <div *ngIf="theEnd">
 <!--<ng-template #elseBlock>-->
     <div id="recapButton">
-        <div class="recapButton" (click)="sendAttempt()" routerLink= "./recap">Récapitulatif</div>
+        <div class="recapButton" routerLink= "./recap">Récapitulatif</div>
     </div>   
 </div> 
 <!--</ng-template>-->
