--- a/front-end/src/app/core/questions/question-view/question-view.component.html
+++ b/front-end/src/app/core/questions/question-view/question-view.component.html
@@ -23,7 +23,7 @@
   <div class="answer-list">
     <div class="answer" *ngFor="let answer of question.answers">
       <div class="fixed-container-bigger">
-      <button class="delete-button" (click)="deleteAnswer(answer)">
+      <button class="delete-button" (click)="checkAnswer(answer); modalService.open(deleteModal)">
         <i class="fas fa-times"></i>
       </button>
       <div class="answer-card">
@@ -35,6 +35,24 @@
   </div>
 </div>
 </body>
+
+<ng-template #deleteModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Confirmation de suppression</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="msg">
+      Supprimer la réponse de façon permanente ?
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-danger" (click)="deleteAnswer(selectedAnswer); modal.close()">Supprimer</button>
+    <button class="btn btn-outline-secondary" (click)="modal.close()">Annuler</button>
+  </div>
+</ng-template>
 
 <ng-template #quitWithInvalidQuestion let-modal>
   <div class="modal-header">
