--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
@@ -25,7 +25,7 @@
             <div class = "tag" *ngIf = "!globalService.isValid(quiz)">
                 INCOMPLET
             </div>
-            <button class="delete-button" (click)="deleteQuiz(quiz)">
+            <button class="delete-button" (click)="checkQuiz(quiz); modalService.open(deleteModal)">
                 <i class="fas fa-times"></i>
             </button>
             <div class="quiz-card" routerLink= "./{{quiz.id}}">
@@ -38,3 +38,20 @@
     </ng-template>
 </body>
 
+<ng-template #deleteModal let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Confirmation de suppression</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="msg">
+            Supprimer le quiz de façon permanente ?
+        </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-danger" (click)="deleteQuiz(selectedQuiz); modal.close()">Supprimer</button>
+      <button class="btn btn-outline-secondary" (click)="modal.close()">Annuler</button>
+    </div>
+</ng-template>
