--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -1,14 +1,32 @@
-    <div *ngIf="player">
-        <div class="custom-control custom-switch">
-            <input type="checkbox" class="custom-control-input" id="customSwitches" [checked] = "chronologicalOrder" (change)="switchOrder()">
-            <label class="custom-control-label" for="customSwitches" style="margin-bottom: 1em;">Ordre chronologique</label>
-        </div>
-        <div class="flex-list">
-            <div *ngFor="let attempt of playerAttempts" class="attempt-item">
-                <button class="delete-button" (click)="deleteAttempt(attempt)">
-                    <i class="fas fa-times"></i>
-                </button>
-                <app-quiz-attempt [attempt]="attempt" routerLink="./statistics/{{attempt.id}}"></app-quiz-attempt>
-            </div>
+<div *ngIf="player">
+    <div class="custom-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="customSwitches" [checked] = "chronologicalOrder" (change)="switchOrder()">
+        <label class="custom-control-label" for="customSwitches" style="margin-bottom: 1em;">Ordre chronologique</label>
+    </div>
+    <div class="flex-list">
+        <div *ngFor="let attempt of playerAttempts" class="attempt-item">
+            <button class="delete-button" (click)="checkAttempt(attempt); modalService.open(deleteModal)">
+                <i class="fas fa-times"></i>
+            </button>
+            <app-quiz-attempt [attempt]="attempt" routerLink="./statistics/{{attempt.id}}"></app-quiz-attempt>
         </div>
     </div>
+</div>
+
+<ng-template #deleteModal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Confirmation de suppression</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <div class="msg">
+        Supprimer la tentative de façon permanente ?
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-danger" (click)="deleteAttempt(selectedAttempt); modal.close()">Supprimer</button>
+      <button class="btn btn-outline-secondary" (click)="modal.close()">Annuler</button>
+    </div>
+</ng-template>
