--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
@@ -11,17 +11,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
     align-items: center;
     justify-content: center;
 }
 
 .frame-list{
-    height: 100px;//à revoir
+    height: 100px;
     width: 100px;
     margin-left: auto;
     margin-right: auto;
-    //border-style: dashed;
     border-color:  rgb(243, 58, 144);
 
 }
