--- a/front-end/src/app/game/runner/runner.component.html
+++ b/front-end/src/app/game/runner/runner.component.html
@@ -1,7 +1,7 @@
 <span class="navbar-brand" routerLink="../.." style="color: grey; margin-left: 0.5em; float: left;">
     <i class="fa fa-angle-left" aria-hidden="true"></i>
 </span>
-<div *ngIf = "quiz && currentQuestion"><!--; else elseBlock">-->
+<div *ngIf = "quiz && currentQuestion">
     <div id="questionQuiz">
         <div *ngIf="image && image.url; else noImage">
             <div *ngIf="currentQuestion.label; else noTxt">
@@ -19,9 +19,7 @@
     <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)" (next) = "onNext($event)" (wrongAnswerEvent) = "onWrongAnswer($event)" (timeOutEvent) = "onTimeOut()"></app-answer-list-widget>
 </div>
 <div *ngIf="theEnd">
-<!--<ng-template #elseBlock>-->
     <div id="recapButton">
         <div class="recapButton" routerLink= "./recap">Récapitulatif</div>
     </div>   
 </div> 
-<!--</ng-template>-->
